Now colors of enemies and allies are configurable, Fixed YACL screen